[package]
name = "rlit"
version = "0.1.0"
authors = ["Martin Suesskraut <22873554+msuesskraut@users.noreply.github.com>"]
edition = "2018"
description = "A LLVM LIT like testing framework written completely in rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

derive_builder = "0.7.2"
